fix: Linter warnings